// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultLayout renders correctly 1`] = `
<div
  style={
    Object {
      "margin": "3rem auto",
      "maxWidth": 650,
      "padding": "0 1rem",
    }
  }
>
  <header>
    <a
      aria-current="page"
      className=""
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={Object {}}
    >
      azujuuuuuun.github.io
    </a>
  </header>
  <p>
    Hello, world!
  </p>
  <footer
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <ul
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <li
        style={
          Object {
            "display": "inline-block",
            "marginRight": 16,
          }
        }
      >
        <a
          aria-current="page"
          className=""
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={Object {}}
        >
          ホーム
        </a>
      </li>
      <li
        style={
          Object {
            "display": "inline-block",
            "marginRight": 16,
          }
        }
      >
        <a
          href="/about"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          自己紹介
        </a>
      </li>
      <li
        style={
          Object {
            "display": "inline-block",
            "marginRight": 16,
          }
        }
      >
        <a
          href="/favorites"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          好きなもの
        </a>
      </li>
      <li
        style={
          Object {
            "display": "inline-block",
            "marginRight": 16,
          }
        }
      >
        <a
          href="/links"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          リンク
        </a>
      </li>
    </ul>
    <small>
      ©Copyright jun. All rights reserved.
    </small>
  </footer>
</div>
`;

exports[`DefaultLayout renders isHome prop correctly 1`] = `
<div
  style={
    Object {
      "margin": "3rem auto",
      "maxWidth": 650,
      "padding": "0 1rem",
    }
  }
>
  <header>
    <h1>
      <a
        aria-current="page"
        className=""
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
        style={Object {}}
      >
        azujuuuuuun.github.io
      </a>
    </h1>
  </header>
  <p>
    Hello, world!
  </p>
  <footer
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <small>
      ©Copyright jun. All rights reserved.
    </small>
  </footer>
</div>
`;
